--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,7 @@
 ###############################################################################
 * text=auto
 * linguist-vendored
-*.js linguist-vendored=false
+#*.js linguist-vendored=false
 
 ###############################################################################
 # Set default behavior for command prompt diff.
@@ -12,7 +12,7 @@
 # default for csharp files.
 # Note: This is only used by command line
 ###############################################################################
-#*.cs     diff=csharp
+*.cs     diff=csharp
 
 ###############################################################################
 # Set the merge driver for project and solution files
