--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,8 @@
 # Note: This is only used by command line
 ###############################################################################
 *.cs     diff=csharp
+* linguist-vendored
+*.cs linguist-vendored=false
 
 ###############################################################################
 # Set the merge driver for project and solution files
